--- a/example.env
+++ b/example.env
@@ -2,8 +2,6 @@
 PORT=":3000"
 
 # Postgres
-POSTGRES_HOST="localhost"
-POSTGRES_PORT="5432"
 POSTGRES_USER=postgres
 POSTGRES_DB=my_app_db
 POSTGRES_PASSWORD=secure_password_here
@@ -11,3 +9,8 @@ POSTGRES_PASSWORD=secure_password_here
 # SSL Mode: disable | require | verify-ca | verify-full
 # Use 'disable' for local dev, 'require' for most cloud hosts
 POSTGRES_SSLMODE=disable
+
+DATABASE_URL=postgres://postgres:yourpassword@localhost:5432/db_name?sslmode=disable
+
+ACCESS_TOKEN_KEY="test-access-key"
+REFRESH_TOKEN_KEY="test-refresh-key"
