fix: IDOR, token security, validation, add unit tests

--- a/example.env
+++ b/example.env
@@ -1,6 +1,11 @@
 # App
 PORT=":3000"
 
+# Auth (required)
+PEPPER="your-random-pepper-here"
+ACCESS_TOKEN_KEY="test-access-key"
+REFRESH_TOKEN_KEY="test-refresh-key"
+
 # Postgres
 POSTGRES_USER=postgres
 POSTGRES_DB=my_app_db
@@ -11,6 +16,3 @@ POSTGRES_PASSWORD=secure_password_here
 POSTGRES_SSLMODE=disable
 
 DATABASE_URL=postgres://postgres:yourpassword@localhost:5432/db_name?sslmode=disable
-
-ACCESS_TOKEN_KEY="test-access-key"
-REFRESH_TOKEN_KEY="test-refresh-key"
